// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projects create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "108",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "admin_ids": [
      "admin-id-1",
      "admin-id-2",
    ],
    "contact_email": "contact@test.com",
    "display_name": "My New Project",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/api/projects",
}
`;

exports[`projects get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/projects/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`projects getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/projects",
}
`;

exports[`projects remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": undefined,
  "method": "DELETE",
  "url": "https://auth.globus.org/v2/api/projects/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`projects update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "76",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "contact_email": "new_email@test.com",
    "display_name": "Updated Project Name",
  },
  "method": "PUT",
  "url": "https://auth.globus.org/v2/api/projects/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;
